--- a/stylesheet.css
+++ b/stylesheet.css
@@ -212,8 +212,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
-        font-size: 18px;
-        font-weight: 400;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -222,9 +222,11 @@ body{
         padding: 15px 20px;
         border-radius: 40px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     #btn-link{
@@ -242,8 +244,9 @@ body{
         padding: 15px 20px;
         border-radius: 40px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -252,9 +255,11 @@ body{
         padding: 15px 20px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     
@@ -386,6 +391,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
     }
     
     #experience-right-button:hover{
@@ -396,7 +403,13 @@ body{
         border-radius: 50px;
         color: white !important;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         cursor: pointer;
+    }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
     }
 }
 
@@ -510,8 +523,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
-        font-size: 18px;
-        font-weight: 400;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -520,9 +533,11 @@ body{
         padding: 15px 20px;
         border-radius: 40px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     #btn-link{
@@ -540,8 +555,9 @@ body{
         padding: 15px 20px;
         border-radius: 40px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -550,9 +566,11 @@ body{
         padding: 15px 20px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     
@@ -683,6 +701,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
     }
     
     #experience-right-button:hover{
@@ -693,7 +713,13 @@ body{
         border-radius: 50px;
         color: white !important;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         cursor: pointer;
+    }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
     }
 }
 
@@ -735,6 +761,10 @@ body{
         align-items: center;
         /* justify-content: space-evenly; */
         text-align: center;
+    }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
     }
 }
 
@@ -877,6 +907,10 @@ body{
         margin-top: 660px !important;
         background: url("assets/desktop/image-footer.jpg") top/cover no-repeat; 
     }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
+    }
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -938,8 +972,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
-        font-size: 18px;
-        font-weight: 400;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -948,9 +982,11 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     #btn-link{
@@ -968,8 +1004,9 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -978,9 +1015,11 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     
@@ -1109,6 +1148,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
     }
     
     #experience-right-button:hover{
@@ -1119,7 +1160,13 @@ body{
         border-radius: 50px;
         color: white !important;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         cursor: pointer;
+    }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
     }
 }
 
@@ -1191,8 +1238,9 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
-        font-size: 18px;
-        font-weight: 400;
+        font-size: 16px;
+        font-weight: 900;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -1201,9 +1249,11 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     #btn-link{
@@ -1220,8 +1270,9 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -1230,9 +1281,11 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     
@@ -1353,14 +1406,6 @@ body{
         width: 550px;
         margin: -20px 0px;
     }
-
-    #experience-right-button{
-        background-color: var(--mauve) ;
-        padding: 20px 40px;
-        border-radius: 50px;
-        color: white;
-        font-weight: 400;
-    }
     
     #experience-right-button{
         opacity: 1 !important;
@@ -1370,6 +1415,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
     }
     
     #experience-right-button:hover{
@@ -1380,7 +1427,13 @@ body{
         border-radius: 50px;
         color: white !important;
         font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         cursor: pointer;
+    }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
     }
 }
 
@@ -1444,6 +1497,10 @@ body{
         height: 40vh;
         background: url("assets/desktop/image-footer.jpg") top/cover no-repeat; 
     }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
+    }
 }
 
  /* Large devices (desktops, 992px and up) */
@@ -1506,8 +1563,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
-        font-size: 18px;
-        font-weight: 400;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -1516,9 +1573,11 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-size: 16px;
+        font-family: 'Red Hat Display', sans-serif ;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     #btn-link{
@@ -1535,8 +1594,9 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -1545,9 +1605,11 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     
@@ -1672,7 +1734,8 @@ body{
         padding: 20px 40px;
         border-radius: 50px;
         color: white;
-        font-weight: 400;
+        font-size: 16px;
+        font-weight: 900;
         font-family: 'Red Hat Display', sans-serif;
         margin-right: 100px !important;
     }
@@ -1684,8 +1747,13 @@ body{
         padding: 20px 40px;
         border-radius: 50px;
         color: white !important;
+        font-weight: 900;
+        font-size: 16px;
         font-family: 'Red Hat Display', sans-serif;
         cursor: pointer;
+    }
+    .btn-version-footer{
+        color: #D9B8FF !important;
     }
 }
 
@@ -1812,6 +1880,10 @@ body{
         font-family: 'Red Hat Display', sans-serif;
         cursor: pointer;
     }
+
+    .btn-version-footer{
+        color: #D9B8FF !important;
+    }
 }
 
 /*  X-Large devices (large desktops, 1200px and up) */
@@ -1826,7 +1898,7 @@ body{
     #hero-middle{
         margin: auto;
         text-align: center;
-        padding: 5px 20px !important;
+        padding: 5px 7px !important;
         color:#28282D;
         width: 100% !important;
     }
@@ -1847,8 +1919,8 @@ body{
     
     
     #hero-head{
-        font-size: 54px;
-        line-height: 54px;
+        font-size: 64px !important;
+        line-height: 64px;
         font-family: 'Red Hat Display', sans-serif;
         font-weight: 900;
     }
@@ -1875,8 +1947,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
-        font-size: 18px;
-        font-weight: 400;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -1885,9 +1957,12 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
+        font-size: 16px;
         line-height: 26px;
+        cursor: pointer;
     }
     
     #btn-link{
@@ -1896,7 +1971,7 @@ body{
     }
     
     .btn-version{
-        color:#8FE3F9;
+        color:#8FE3F9 !important; 
     }
     
     #hero-button-right{
@@ -1904,8 +1979,9 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
     }
     
@@ -1914,9 +1990,11 @@ body{
         padding: 20px 30px;
         border-radius: 50px;
         color: white;
-        font-size: 18px;
-        font-weight: 400;
+        font-family: 'Red Hat Display', sans-serif;
+        font-size: 16px;
+        font-weight: 900;
         line-height: 26px;
+        cursor: pointer;
     }
     
     
@@ -1937,8 +2015,8 @@ body{
     }
     
     .meeting-section{
-        height: 90vh;
-        text-align: center;
+        height: 100vh !important;
+        text-align: center; 
     }
     
     #meeting-imgs{
@@ -1979,7 +2057,7 @@ body{
         font-size: 18px;
         line-height: 26px;
         font-weight:500;
-        margin: 15px 350px;
+        margin: 15px 500px 100px 500px;
     }
     
     #pagination-thin-line{
@@ -2007,7 +2085,7 @@ body{
         position: relative;
         opacity: 0.999 !important;
         z-index: 1;
-        margin-top: -60px !important;
+        margin-top: -73px !important;
         height: 50vh;
         background: url("assets/desktop/image-footer.jpg") top/cover no-repeat; 
     }
@@ -2048,6 +2126,8 @@ body{
         border-radius: 50px;
         color: white;
         font-family: 'Red Hat Display', sans-serif;
+        font-weight: 900;
+        font-size: 16px;
     }
     
     #experience-right-button:hover{
@@ -2058,11 +2138,13 @@ body{
         border-radius: 50px;
         color: white !important;
         font-family: 'Red Hat Display', sans-serif;
+        font-weight: 900;
+        font-size: 16px;
         cursor: pointer;
     }
 
-    .btn-version{
-        color: #D9B8FF;
+    .btn-version-footer{
+        color: #D9B8FF !important;
     }
 }
 
